kubernetes/argocd/stacks/bmes-site/bmes-site.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: bmes-site
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: bmes-site
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bmes-redirect
  namespace: bmes-site
  annotations:
    external-dns.alpha.kubernetes.io/target: app.acmuic.org
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: "Host(`convergehealth.cc`) || Host(`www.convergehealth.cc`)"
      middlewares:
        - name: https-redirect
      services:
        - kind: Service
          name: bmes-site-convergehealth
          namespace: bmes-site
          passHostHeader: true
          port: http
          responseForwarding:
            flushInterval: 1ms
          scheme: http
          strategy: RoundRobin
          weight: 10
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bmes
  namespace: bmes-site
  annotations:
    external-dns.alpha.kubernetes.io/target: app.acmuic.org
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`convergehealth.cc`) || Host(`www.convergehealth.cc`)"
      services:
        - kind: Service
          name: bmes-site-convergehealth
          namespace: bmes-site
          passHostHeader: true
          port: http
          responseForwarding:
            flushInterval: 1ms
          scheme: http
          strategy: RoundRobin
          weight: 10
  tls:
    secretName: bmes-tls
